<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clothing Store</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_listado_shirt">ListadoShirtActivity</string>
    <string name="title_activity_editar_shirt">EditarShirtActivity</string>
    <string name="rojo">Color Rojo</string>
    <string name="verde">Color Verde</string>
    <string name="azul">Color Azul</string>
    <string name="noseteado">No Seteado</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="titulo_editar">Editar Camisa</string>
    <string name="color">Color</string>
    <string name="stock">Stock</string>
    <string name="titulo_inicio">Camisas</string>
    <string name="titulo_listado">Listado Camisas</string>
    <string name="titulo_agregar">Agregar Camisa</string>
    <string name="title_activity_nueva_shirt">NuevaShirtActivity</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="volver">Volver</string>
    <string name="title_activity_nuevo_hat">NuevoHatActivity</string>

</resources>
