<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    tools:context=".EditarShirtActivity" >
<TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_agregar" 
                android:textAppearance="?android:attr/textAppearanceLarge"
        		android:gravity="center"
        		android:typeface="sans"/>
    
    
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

              <TextView
        android:id="@+id/textView2"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:ems="10" 
        android:inputType="text">
        </EditText>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
           <TextView
        android:id="@+id/textView3"
        android:text="@string/precio" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />  
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
    
        <TextView
        android:id="@+id/textView4"
        android:text="@string/stock" />

    <EditText
        android:id="@+id/txtStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />     
       
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
     <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color" />

         <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/radioUnset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noseteado"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radioRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rojo"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radioBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azul"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radioGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verde"
        android:onClick="onRadioButtonClicked"/>

   

</RadioGroup>

        </TableRow>

       <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_span="2"
            android:width="50dp" 
            android:onClick="guardar_Action"/>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnVolverListaProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:layout_span="2"
            android:width="50dp" 
            android:onClick="volver_Action"/>

    </TableRow>

</TableLayout>